--- a/frontend/home.html
+++ b/frontend/home.html
@@ -17,11 +17,18 @@
 	    </li>
 	     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
 	    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+
 	  </ul>
 	  <section class="top-bar-section">
 	    <!-- Right Nav Section -->
 	    <ul class="right">
-	      <li class="active"><a href="#">Right Button Active</a></li>
+	      <li class="active"><a href="#" class="medium radius button">Add a Test</a></li>
+	      <li class="divider"></li>
+	      <li class="active"><a href="#" data-reveal-id="firstModal" class="medium radius button">View All Test</a></li>
+	      <div style="position:absolute; float:left" id="firstModal" class="reveal-modal" data-reveal>
+	      	<p> TO BE COMPLETED </p>
+	      	<a class="close-reveal-modal">&#215;</a>
+	      </div>
 	      <li class="has-dropdown">
 	        <a href="#">Login/Logout</a>
 	        <ul class="dropdown">
@@ -32,6 +39,17 @@
 	    <!-- Left Nav Section -->
 	    <ul class="left">
 	      <li class="active"><a href="#">Home</a></li>
+	      <li class="divider"></li>
+	      <li class="has-form">
+			  <div class="row collapse">
+			    <div class="large-8 columns">
+			      <input type="text" placeholder="Find Stuff">
+			    </div>
+			    <div class="large-4 columns">
+			      <a href="#" class="alert button expand">Search</a>
+			    </div>
+			  </div>
+			</li>
 	    </ul>
 	  </section>
 	</nav>
@@ -46,16 +64,7 @@
 	</div>
 
 	<div class="row">
-		<div class="large-2 medium-10 columns">
-			<div class="panel">
-				<a href="#" class="large radius button">Add Test</a>
-				<a href="#" data-reveal-id="firstModal" class="large radius button">Edit Test</a>
-				<div style="position:absolute; float:left" id="firstModal" class="reveal-modal" data-reveal>
-		          <a class="close-reveal-modal">&#215;</a>
-		        </div>
-			</div>
-		</div>
-		<div class="large-10 medium-2 columns">
+		<div class="large-12 columns">
 			<div class="panel">
 
 				<div class="row">
