--- a/frontend/home.html
+++ b/frontend/home.html
@@ -26,7 +26,25 @@
 	      <li class="divider"></li>
 	      <li class="active"><a href="#" data-reveal-id="firstModal" class="medium radius button">View All Test</a></li>
 	      <div style="position:absolute; float:left" id="firstModal" class="reveal-modal" data-reveal>
-	      	<p> TO BE COMPLETED </p>
+	      	<div class="row">
+	      		<div class="large-12 columns">
+	      			<h2>View All Tests</h2>
+	      		</div>
+	      	</div>
+	      	<div class="row">
+	      		<div class="large-12 columns">
+	      			<ul class="clearing-thumbs small-block-grid-4" data-clearing>
+		              <li><a href="img/folderpic.jpg"><img data-caption="File 1" src="img/folderpic.jpg"></a></li>
+		              <li><a href="img/folderpic.jpg"><img data-caption="File 2" src="img/folderpic.jpg"></a></li>
+		              <li><a href="img/folderpic.jpg"><img data-caption="File 3" src="img/folderpic.jpg"></a></li>
+		              <li><a href="img/folderpic.jpg"><img data-caption="File 4" src="img/folderpic.jpg"></a></li>
+		              <li><a href="img/folderpic.jpg"><img data-caption="File 1" src="img/folderpic.jpg"></a></li>
+		              <li><a href="img/folderpic.jpg"><img data-caption="File 2" src="img/folderpic.jpg"></a></li>
+		              <li><a href="img/folderpic.jpg"><img data-caption="File 3" src="img/folderpic.jpg"></a></li>
+		              <li><a href="img/folderpic.jpg"><img data-caption="File 4" src="img/folderpic.jpg"></a></li>
+		            </ul>
+	      		</div>
+	      	</div>
 	      	<a class="close-reveal-modal">&#215;</a>
 	      </div>
 	      <li class="has-dropdown">
@@ -43,7 +61,7 @@
 	      <li class="has-form">
 			  <div class="row collapse">
 			    <div class="large-8 columns">
-			      <input type="text" placeholder="Find Stuff">
+			      <input type="text" placeholder="Search...">
 			    </div>
 			    <div class="large-4 columns">
 			      <a href="#" class="alert button expand">Search</a>
