--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Troll AF</title>
+    <title>Landing</title>
     <link rel="stylesheet" href="foundation/css/foundation.css"/>
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <script src="foundation/js/vendor/modernizr.js"></script>
