raise your dongers REGI BLUE CARD OR RIOT
yo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,138 +17,234 @@
   <br/>
 
   <div class="row">
-    <div class="large-10 columns">
+    <div class="large-12 columns">
       <h1>[Sample Text] Teacher's Portal</h1>
       <br/>
     </div>
-    <div class="large-2 columns">
-      <!-- Triggers the modals -->
-      <div class="row">
-        <div class="large-12 columns">
-          <a href="#" data-reveal-id="firstModal" class="medium radius button">Login</a>
-        </div>
-      </div>
-      <!-- Reveal Modals begin -->
-      <div style="position:absolute; float:left" id="firstModal" class="reveal-modal" data-reveal>
-        <h2><center>Sign In</center></h2>
-        <br/>
-        <div class="row">
-          <div class="large-6 columns">
-            <div class="callout panel">
-              <h3><center>Register</center></h3>
-              <br/>
-
-              <div class="row">
-                <div class="large-12 columns">
-                  <div class="row collapse">
-                    <div class="small-3 columns">
-                      <span class="prefix">Email:</span>
-                    </div>
-                    <div class="small-9 columns">
-                      <input type="text" placeholder="Email..." />
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="large-12 columns">
-                  <div class="row collapse">
-                    <div class="small-3 columns">
-                      <span class="prefix">Username:</span>
-                    </div>
-                    <div class="small-9 columns">
-                      <input type="text" placeholder="Username..." />
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="large-12 columns">
-                  <div class="row collapse">
-                    <div class="small-3 columns">
-                      <span class="prefix">Password:</span>
-                    </div>
-                    <div class="small-9 columns">
-                      <input type="text" placeholder="Password..." />
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <br/>
-              <center><a href="#" class="medium round success button">Submit</a>
-                <br/>
-              </center>
-            </div>
-          </div>
-          <div class="large-6 columns">
-            <div class="callout panel">
-              <br/>
-              <br/>
-              <h3><center>Already Registered?</center></h3>
-              <br/>
-              <div class="row">
-                <div class="large-12 columns">
-                  <div class="row collapse">
-                    <div class="small-3 columns">
-                      <span class="prefix">Username/Email:</span>
-                    </div>
-                    <div class="small-9 columns">
-                      <input type="text" placeholder="User/Email..." />
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <br/>
-              <div class="row">
-                <div class="large-12 columns">
-                  <div class="row collapse">
-                    <div class="small-3 columns">
-                      <span class="prefix">Password:</span>
-                    </div>
-                    <div class="small-9 columns">
-                      <input type="text" placeholder="Password..." />
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <br/>
-              <center><a href="#" class="medium round success button">Login</a>
-                <br/>
-              </center>
-            </div>
-          </div>
-        </div>
-        <a class="close-reveal-modal">&#215;</a>
-      </div>
-      <!-- Reveal Modals end -->
-    </div>
   </div>
-
 
   <div class="row">
     <div class="large-12 columns">
       <div class="panel">
-        <h3>We&rsquo;re stoked you want to try Foundation! </h3>
+        <h3>We&rsquo;re stoked you want to try [Sample Text]! </h3>
 
-        <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-        <p>Once you've exhausted the fun in this document, you should check out:</p>
+        <p>To get going, first register. Then check out this awesome shit.</p>
+        <p>Once you're exhausted our shitty service, you probably shouldn't check out...</p>
         <br/>
         <div class="row">
           <div class="large-4 medium-4 columns">
-            <center><p><a href="#" data-reveal-id="firstModal">New?</a>
-              <br />Register to see all our cool features!</p></center>
+            <center>
+              <p><a href="#" data-reveal-id="teacherModal">Teachers...</a>
+                <br />Sign in to your account to create tests, manage tests, and observe students' preformance.</p>
+            </center>
+            <center>
+              <a href="#" data-reveal-id="teacherModal" class="medium button">Sign In</a>
+            </center>
+            <div style="position:absolute; float:left" id="teacherModal" class="reveal-modal" data-reveal>
+              <h3><center>Sign In</center></h3>
+              <br/>
+              <div class="row">
+                <div class="large-6 columns">
+                  <div class="callout panel">
+                    <h4><center>Register</center></h4>
+                    <br/>
+
+                    <div class="row">
+                      <div class="large-12 columns">
+                        <div class="row collapse">
+                          <div class="small-3 columns">
+                            <span class="prefix">Email:</span>
+                          </div>
+                          <div class="small-9 columns">
+                            <input type="text" placeholder="Email..." />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="large-12 columns">
+                        <div class="row collapse">
+                          <div class="small-3 columns">
+                            <span class="prefix">Username:</span>
+                          </div>
+                          <div class="small-9 columns">
+                            <input type="text" placeholder="Username..." />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="large-12 columns">
+                        <div class="row collapse">
+                          <div class="small-3 columns">
+                            <span class="prefix">Password:</span>
+                          </div>
+                          <div class="small-9 columns">
+                            <input type="text" placeholder="Password..." />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <br/>
+                    <center><a href="#" class="medium round success button">Submit</a>
+                      <br/>
+                    </center>
+                  </div>
+                </div>
+                <div class="large-6 columns">
+                  <div class="callout panel">
+                    <br/>
+                    <br/>
+                    <h4><center>Already Registered?</center></h4>
+                    <br/>
+                    <div class="row">
+                      <div class="large-12 columns">
+                        <div class="row collapse">
+                          <div class="small-3 columns">
+                            <span class="prefix">Username/Email:</span>
+                          </div>
+                          <div class="small-9 columns">
+                            <input type="text" placeholder="User/Email..." />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <br/>
+                    <div class="row">
+                      <div class="large-12 columns">
+                        <div class="row collapse">
+                          <div class="small-3 columns">
+                            <span class="prefix">Password:</span>
+                          </div>
+                          <div class="small-9 columns">
+                            <input type="text" placeholder="Password..." />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <br/>
+                    <center><a href="#" class="medium round success button">Login</a>
+                      <br/>
+                    </center>
+                  </div>
+                </div>
+              </div>
+              <a class="close-reveal-modal">&#215;</a>
+            </div>
           </div>
           <div class="large-4 medium-4 columns">
-            <center><p><a href="https://github.com/justinyangusa/angelhack">[Insert] on Github</a>
-              <br />Latest code, issue reports, feature requests and more.</p></center>
+            <center>
+              <p><a href="https://github.com/justinyangusa/angelhack">[Insert] on Github</a>
+                <br />Latest code, issue reports, feature requests and more.</p>
+            </center>
           </div>
           <div class="large-4 medium-4 columns">
-            <center><p><a href="http://twitter.com/foundationzurb">@foundationzurb</a>
-              <br />Ping us on Twitter if you have questions. If you build something with this we'd love to see it (and send you a totally boss sticker).</p></center>
+            <center>
+              <p><a href="#" data-reveal-id="studentModal">Students...</a>
+                <br />Login to take current tests, check previous test scores, and </p>
+            </center>
+            <center>
+              <a href="#" data-reveal-id="studentModal" class="medium button">Sign In</a>
+            </center>
+            <div style="position:absolute; float:left" id="studentModal" class="reveal-modal" data-reveal>
+              <h3><center>Sign In</center></h3>
+              <br/>
+              <div class="row">
+                <div class="large-6 columns">
+                  <div class="callout panel">
+                    <h4><center>Register</center></h4>
+                    <br/>
+
+                    <div class="row">
+                      <div class="large-12 columns">
+                        <div class="row collapse">
+                          <div class="small-3 columns">
+                            <span class="prefix">Email:</span>
+                          </div>
+                          <div class="small-9 columns">
+                            <input type="text" placeholder="Email..." />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="large-12 columns">
+                        <div class="row collapse">
+                          <div class="small-3 columns">
+                            <span class="prefix">Username:</span>
+                          </div>
+                          <div class="small-9 columns">
+                            <input type="text" placeholder="Username..." />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row">
+                      <div class="large-12 columns">
+                        <div class="row collapse">
+                          <div class="small-3 columns">
+                            <span class="prefix">Password:</span>
+                          </div>
+                          <div class="small-9 columns">
+                            <input type="text" placeholder="Password..." />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <br/>
+                    <center><a href="#" class="medium round success button">Submit</a>
+                      <br/>
+                    </center>
+                  </div>
+                </div>
+                <div class="large-6 columns">
+                  <div class="callout panel">
+                    <br/>
+                    <br/>
+                    <h4><center>Already Registered?</center></h4>
+                    <br/>
+                    <div class="row">
+                      <div class="large-12 columns">
+                        <div class="row collapse">
+                          <div class="small-3 columns">
+                            <span class="prefix">Username/Email:</span>
+                          </div>
+                          <div class="small-9 columns">
+                            <input type="text" placeholder="User/Email..." />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <br/>
+                    <div class="row">
+                      <div class="large-12 columns">
+                        <div class="row collapse">
+                          <div class="small-3 columns">
+                            <span class="prefix">Password:</span>
+                          </div>
+                          <div class="small-9 columns">
+                            <input type="text" placeholder="Password..." />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <br/>
+                    <center><a href="#" class="medium round success button">Login</a>
+                      <br/>
+                    </center>
+                  </div>
+                </div>
+              </div>
+              <a class="close-reveal-modal">&#215;</a>
+            </div>
           </div>
         </div>
         <div class="row">
