--- a/frontend/old html/home.html
+++ b/frontend/old html/home.html
@@ -365,7 +365,8 @@
 
   <script src="foundation/js/vendor/jquery.js"></script>
   <script src="foundation/js/foundation.min.js"></script>
- n       $(document).foundation();
+  <script>
+    $(document).foundation();
   </script>
 </body>
 
