--- a/desktop/login.html
+++ b/desktop/login.html
@@ -25,9 +25,9 @@
   <section class="container">
     <div class="login">
       <h1 style="font-family: 'Open Sans Condensed', sans-serif;">eTest: Student Client</h1>
-      <form method="post" action="/login" onsubmit="return false;">
-        <p><input type="text" name="user" value="" placeholder="Username or Email"></p>
-        <p><input type="password" name="pw" value="" placeholder="Password"></p>
+      <form method="post" action="http://54.191.107.206:8000/login/" onsubmit="return false;">
+        <p><input type="text" name="username" value="" placeholder="Username"></p>
+        <p><input type="password" name="password" value="" placeholder="Password"></p>
         <p class="remember_me">
           <label style="font-family: 'Open Sans Condensed', sans-serif;">
             <input type="checkbox" name="remember_me" id="remember_me" > 
