--- a/desktop/student.html
+++ b/desktop/student.html
@@ -113,7 +113,7 @@
           // xhr.open("POST", "http://127.0.0.1:8000", false);
           // xhr.send(1234);
           // if (JSON.parse(xhr.response).testAvailable == 1) {
-            document.write("<a href='taketest.html'>Test 1234</a>");
+            document.write("<a href='taketest.html?1234'>Test 1234</a>");
           // } else {
           //   document.write("No tests available");
           // }
