create grading framework, add in yolo.js for db testing

--- a/desktop/taketest.html
+++ b/desktop/taketest.html
@@ -13,7 +13,7 @@
 		<div class="callout panel">
 			<div style="float:right;">
 				<script type="application/javascript">
-					
+					// Add back in node-webkit stuff after finished testing.
 					var myCountdown1 = new Countdown({
 						time: 0
 					});
