--- a/desktop/taketest.html
+++ b/desktop/taketest.html
@@ -1,18 +1,6 @@
 <!doctype html>
 <html>
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
-<!-- KEN SEE LINE 83 -->
+<!-- kevin is such a troll -->
 <head>
 	<link rel="stylesheet" href="foundation/css/foundation.css" />
 	<link rel="stylesheet" href="foundation/css/normalize.css" />
