Revert "wtf kevin"
This reverts commit 96717f188de44ac4fc1215737cdda4fd20226245.

--- a/desktop/taketest.html
+++ b/desktop/taketest.html
@@ -1,6 +1,18 @@
 <!doctype html>
 <html>
-<!-- kevin is such a troll -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
+<!-- KEN SEE LINE 83 -->
 <head>
 	<link rel="stylesheet" href="foundation/css/foundation.css" />
 	<link rel="stylesheet" href="foundation/css/normalize.css" />
