--- a/desktop/student.html
+++ b/desktop/student.html
@@ -33,7 +33,7 @@
             <ul class="dropdown">
               <li><a href="#">Account/Settings</a>
               </li>
-              <li><a href="#" onclick="gui,App.quit();">Logout & Close</a>
+              <li><a href="#" onclick="gui,App.quit();">Logout Close</a>
               </li>
             </ul>
           </li>
